gitops/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-localhost
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - backend:
              service:
                name: spring-demo-app
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
